[gd_scene load_steps=20 format=3 uid="uid://db1pyw8ifje3u"]

[ext_resource type="Script" path="res://world/script/level_0.gd" id="1_od1pg"]
[ext_resource type="PackedScene" uid="uid://mvbqenuym03q" path="res://assets/models/mapa8hams.glb" id="2_i0g3c"]
[ext_resource type="PackedScene" uid="uid://b64emow2kgouj" path="res://assets/models/hamster_wheel.glb" id="2_o68w1"]
[ext_resource type="PackedScene" uid="uid://3gaox0812jtj" path="res://Camara2Player/scene/camera_2p.tscn" id="4_5uctk"]
[ext_resource type="PackedScene" uid="uid://bgjw635ryk5cu" path="res://assets/models/Meta..glb" id="4_ej8ho"]
[ext_resource type="Theme" path="res://Fonts/font_theme_pixelart.tres" id="5_fdmp6"]
[ext_resource type="FontFile" uid="uid://bdw2re343j0hm" path="res://Fonts/ThaleahFat.ttf" id="6_us3ei"]
[ext_resource type="PackedScene" uid="uid://d083bj7busxs5" path="res://Goal/scene/goal.tscn" id="7_v0xl5"]
[ext_resource type="PackedScene" path="res://Goal/scene/CheckPoint.tscn" id="8_i802p"]
[ext_resource type="PackedScene" path="res://Goal/scene/died.tscn" id="9_n4n14"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dnc1n"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kqmhy"]
transparency = 1
albedo_color = Color(0.85, 0.269167, 0.153, 0.45098)
metallic = 0.5
roughness = 0.0
roughness_texture_channel = 3
emission_enabled = true
emission_energy_multiplier = 10.08
emission_operator = 1
emission_on_uv2 = true
rim_texture = SubResource("NoiseTexture2D_dnc1n")
clearcoat_roughness = 0.0
uv2_triplanar = true

[sub_resource type="GDScript" id="GDScript_j2a6w"]
script/source = "extends Node3D

@onready var hamster_ball = get_parent().get_node(\"hamster_ball\")
@onready var camera: Camera3D = $\"../hamster_ball/CameraRig/Camera3D\"
@onready var animation_player: AnimationPlayer = $AnimationPlayer

var rotation_speed := 100.0

func _process(delta: float) -> void:
	if hamster_ball:
		global_position = hamster_ball.global_position
		
		var camera_forward = -camera.global_transform.basis.z
		camera_forward.y = 0
		camera_forward = camera_forward.normalized()
		
		var target_rotation = atan2(camera_forward.x, camera_forward.z) - 1.5
		rotation.y = lerp_angle(rotation.y, target_rotation, 0.1)
		
		# Check if the hamster ball is moving
		var ball_speed = hamster_ball.linear_velocity.length()
		if ball_speed > 0.1:
			if !animation_player.is_playing():
				animation_player.play(\"ArmatureAction_001\")
			# Adjust animation speed based on ball speed
			animation_player.speed_scale = ball_speed / 10.0  # Adjust the divisor to control sensitivity
		else:
			animation_player.stop()
"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_363hw"]
albedo_color = Color(0.21, 0.10024, 0.0042, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pmwoq"]
sky_top_color = Color(0.389371, 0.532866, 0.991924, 1)
sky_horizon_color = Color(0.826388, 0.936695, 0.697574, 1)
ground_bottom_color = Color(0.402676, 0.586335, 0.288183, 1)
ground_horizon_color = Color(0.424175, 0.736669, 0.437012, 1)
ground_energy_multiplier = 0.74

[sub_resource type="Sky" id="Sky_n78yi"]
sky_material = SubResource("ProceduralSkyMaterial_pmwoq")

[sub_resource type="Environment" id="Environment_pe761"]
background_mode = 2
sky = SubResource("Sky_n78yi")
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.739811, 0.76485, 0.804196, 1)
fog_light_energy = 0.5
fog_density = 0.0015

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r501c"]
height = 0.401211
radius = 4.56235

[sub_resource type="GDScript" id="GDScript_ha562"]
script/source = "class_name Died extends Area3D
"

[node name="level_1" type="Node3D"]
script = ExtResource("1_od1pg")

[node name="hamster_wheel" parent="." instance=ExtResource("2_o68w1")]
transform = Transform3D(-24.1604, 0, 29.4972, 0, 38.1288, 0, -29.4972, 0, -24.1604, 21.4664, 21.1499, -12.5577)

[node name="Shading" type="Node3D" parent="."]

[node name="mapa8hams" parent="." instance=ExtResource("2_i0g3c")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 13.0622, 0)

[node name="Meta_" parent="." instance=ExtResource("4_ej8ho")]
transform = Transform3D(0.8628, 0, 0, 0, 0.8628, 0, 0, 0, 0.8628, -90.8634, -3.46985, -72.7865)

[node name="Camera3D" parent="." instance=ExtResource("4_5uctk")]

[node name="SubViewportP" parent="Camera3D/SubViewportContainer" index="0"]
size = Vector2i(1344, 1080)

[node name="player1" parent="Camera3D/SubViewportContainer/SubViewportP" index="0"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -89.731, -4.0794, -74.7671)

[node name="Skeleton3D" parent="Camera3D/SubViewportContainer/SubViewportP/player1/hamster/Armature" index="0"]
bones/0/rotation = Quaternion(0.415996, -0.139276, 0.89631, -0.0646413)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(0.707107, -1.37679e-07, -1.37679e-07, 0.707107)
bones/2/position = Vector3(-1.71927e-07, 0.254603, -0.389484)
bones/2/rotation = Quaternion(3.09996e-07, 0.0185299, 0.999828, -2.79062e-08)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.12692, 1.85634e-07, -2.16016e-08, 0.991913)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.466605, -2.32209e-07, 2.14101e-08, 0.884466)
bones/5/rotation = Quaternion(0.575088, 1.8402e-08, -5.51875e-08, 0.818092)

[node name="Player1_UI" type="Control" parent="Camera3D/SubViewportContainer/SubViewportP" index="1"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRectp1" type="TextureRect" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
pivot_offset = Vector2(50, 50)

[node name="GridContainer" type="GridContainer" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 58.0
offset_bottom = 60.0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(-10, 100)

[node name="SpritePosition1" type="TextureRect" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI/GridContainer"]
texture_filter = 1
layout_mode = 2

[node name="SpritePosition2" type="TextureRect" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI/GridContainer"]
texture_filter = 1
layout_mode = 2

[node name="Label_laps1" type="Label" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI"]
texture_filter = 1
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("5_fdmp6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_us3ei")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Camera3D/SubViewportContainer/SubViewportP/Player1_UI/Label_laps1"]
layout_mode = 0
offset_left = 53.0
offset_top = 9.0
offset_right = 151.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("6_us3ei")
theme_override_font_sizes/font_size = 32
text = "/3 Laps"
vertical_alignment = 1

[node name="SubViewport2" parent="Camera3D/SubViewportContainer2" index="0"]
size = Vector2i(1344, 1080)

[node name="player2" parent="Camera3D/SubViewportContainer2/SubViewport2" index="0"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -89.5355, -3.94331, -72.7501)

[node name="mesh" parent="Camera3D/SubViewportContainer2/SubViewport2/player2/hamster_ball" index="0"]
material_override = SubResource("StandardMaterial3D_kqmhy")

[node name="hamster" parent="Camera3D/SubViewportContainer2/SubViewport2/player2" index="1"]
script = SubResource("GDScript_j2a6w")

[node name="Skeleton3D" parent="Camera3D/SubViewportContainer2/SubViewport2/player2/hamster/Armature" index="0"]
bones/0/rotation = Quaternion(0.415996, -0.139276, 0.89631, -0.0646413)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(0.707107, -1.37679e-07, -1.37679e-07, 0.707107)
bones/2/position = Vector3(-1.71927e-07, 0.254603, -0.389484)
bones/2/rotation = Quaternion(3.09996e-07, 0.0185299, 0.999828, -2.79062e-08)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.12692, 1.85634e-07, -2.16016e-08, 0.991913)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.466605, -2.32209e-07, 2.14101e-08, 0.884466)
bones/5/rotation = Quaternion(0.575088, 1.8402e-08, -5.51875e-08, 0.818092)

[node name="Cube" parent="Camera3D/SubViewportContainer2/SubViewport2/player2/hamster/Armature/Skeleton3D" index="0"]
material_override = SubResource("StandardMaterial3D_363hw")

[node name="Player2_UI" type="Control" parent="Camera3D/SubViewportContainer2/SubViewport2" index="1"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRectp2" type="TextureRect" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(3, 3)
pivot_offset = Vector2(50, 50)

[node name="GridContainer" type="GridContainer" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 58.0
offset_bottom = 60.0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(-10, 100)

[node name="SpritePosition1" type="TextureRect" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI/GridContainer"]
texture_filter = 1
layout_mode = 2

[node name="SpritePosition2" type="TextureRect" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI/GridContainer"]
texture_filter = 1
layout_mode = 2

[node name="Label_laps2" type="Label" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI"]
texture_filter = 1
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("5_fdmp6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_us3ei")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Camera3D/SubViewportContainer2/SubViewport2/Player2_UI/Label_laps2"]
layout_mode = 0
offset_left = 53.0
offset_top = 9.0
offset_right = 151.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("6_us3ei")
theme_override_font_sizes/font_size = 32
text = "/3 Laps"
vertical_alignment = 1

[node name="LabelTimer" parent="Camera3D/LabelTimer" index="0"]
theme = ExtResource("5_fdmp6")

[node name="TimerPlayer" type="Timer" parent="Camera3D"]

[node name="enviroment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pe761")

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.109893, -0.858887, -0.500237, -0.881607, -0.148194, 0.448116, -0.459013, 0.490257, -0.740915, 0, 0.912998, 0.485992)
light_color = Color(0.812432, 0.722245, 0.662261, 1)
light_energy = 0.5
light_indirect_energy = 0.5
shadow_enabled = true

[node name="Goal" parent="." instance=ExtResource("7_v0xl5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -73.5863, -5.34136, -66.0858)

[node name="CollisionShape3D" parent="Goal" index="0"]
transform = Transform3D(-0.0548282, 0, 0.998496, 0, 1, 0, -0.998496, 0, -0.0548282, -16.0191, 29.331, -7.70546)

[node name="Timerlabel" type="Timer" parent="."]
wait_time = 5.0

[node name="ChekPointContainer" type="Node3D" parent="."]

[node name="CheckPoint" parent="ChekPointContainer" instance=ExtResource("8_i802p")]

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint" index="0"]
transform = Transform3D(0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -46.2815, 4.64176, -36.461)

[node name="CheckPoint2" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.2732, 0, -41.3249)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint2" index="0"]
transform = Transform3D(-0.173648, 0, 0.984808, 0, 1, 0, -0.984808, 0, -0.173648, -46.2815, 4.65164, -33.9698)

[node name="CheckPoint3" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 192.666, 0, 57.1077)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint3" index="0"]
transform = Transform3D(-0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, -0.984808, -46.0821, 4.65033, -33.9851)

[node name="CheckPoint4" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 140.64, 0, 97.1282)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint4" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -38.3194, 4.64689, -48.8016)

[node name="CheckPoint5" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 107.289, 0, 109.134)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint5" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 0.247303, -1.081e-08, -0.968938, 0.968938, -4.23536e-08, 0.247303, -31.9796, 0.205045, -45.7311)
shape = SubResource("CylinderShape3D_r501c")

[node name="CheckPoint6" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 51.1406, 0, 78.8261)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint6" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -37.0906, 4.64255, -48.308)

[node name="CheckPoint7" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.5346, 0, 107.612)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint7" index="0"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -34.0344, 4.64426, -48.1637)

[node name="CheckPoint8" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -76.9712, 0, 119.487)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint8" index="0"]
transform = Transform3D(-0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, -0.642788, -35.4574, 4.64697, -45.2075)

[node name="CheckPoint9" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -147.314, 0, 102.063)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint9" index="0"]
transform = Transform3D(0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -35.1939, 4.64937, -41.7506)

[node name="CheckPoint10" parent="ChekPointContainer" instance=ExtResource("8_i802p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -118.269, 0, -13.5638)

[node name="CollisionShape3D" parent="ChekPointContainer/CheckPoint10" index="0"]
transform = Transform3D(-0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, -0.965926, -35.4232, 4.93663, -49.3982)

[node name="Died" parent="." instance=ExtResource("9_n4n14")]
script = SubResource("GDScript_ha562")

[node name="CollisionShape3D" parent="Died" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.4728, -47.6079, -2.02516)

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.780845, 0.624725, 0, -0.624725, 0.780845, 0, 65.7673, 119.709)
current = true

[connection signal="timeout" from="Camera3D/TimerPlayer" to="." method="_on_timer_player_timeout"]
[connection signal="timeout" from="Timerlabel" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint" to="Goal" method="_on_check_point_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint2" to="Goal" method="_on_check_point_2_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint3" to="Goal" method="_on_check_point_3_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint4" to="Goal" method="_on_check_point_4_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint5" to="Goal" method="_on_check_point_5_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint6" to="Goal" method="_on_check_point_6_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint7" to="Goal" method="_on_check_point_7_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint8" to="Goal" method="_on_check_point_8_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint9" to="Goal" method="_on_check_point_9_body_entered"]
[connection signal="body_entered" from="ChekPointContainer/CheckPoint10" to="Goal" method="_on_check_point_10_body_entered"]
[connection signal="body_entered" from="Died" to="Goal" method="_on_died_body_entered"]

[editable path="mapa8hams"]
[editable path="Camera3D"]
[editable path="Camera3D/SubViewportContainer/SubViewportP/player1"]
[editable path="Camera3D/SubViewportContainer/SubViewportP/player1/hamster"]
[editable path="Camera3D/SubViewportContainer2/SubViewport2/player2"]
[editable path="Camera3D/SubViewportContainer2/SubViewport2/player2/hamster"]
[editable path="Goal"]
[editable path="ChekPointContainer/CheckPoint"]
[editable path="ChekPointContainer/CheckPoint2"]
[editable path="ChekPointContainer/CheckPoint3"]
[editable path="ChekPointContainer/CheckPoint4"]
[editable path="ChekPointContainer/CheckPoint5"]
[editable path="ChekPointContainer/CheckPoint6"]
[editable path="ChekPointContainer/CheckPoint7"]
[editable path="ChekPointContainer/CheckPoint8"]
[editable path="ChekPointContainer/CheckPoint9"]
[editable path="ChekPointContainer/CheckPoint10"]
[editable path="Died"]
